--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.12.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
